@@ -1,2 +1,2 @@
 *.pyc
-
+install-check
