@@ -1,29 +1,0 @@
-#!/bin/sh
-
-# install -c source dest
-if [ $# = 3 -a "$1" = "-c" -a ! -d "$3" -a ! "$2" = "-d" ]; then
-    if cmp -s $2 $3; then
-	: do nothing
-	exit 0
-    fi
-# install source dest
-elif [ $# = 2 -a  ! -d "$2" -a ! "$1" = "-d" ]; then
-    if cmp -s $1 $2; then
-	: do nothing
-	exit 0
-    fi
-# install -c -m perms source dest
-elif [ $# = 5 -a "$1" = "-c" -a $2 = "-m" -a ! -d "$5" ]; then
-    if cmp -s $4 $5; then
-	: do nothing
-	exit 0
-    fi
-# install -m perms source dest
-elif [ $# = 4 -a $1 = "-m" -a ! -d "$4" ]; then
-    if cmp -s $3 $4; then
-	: do nothing
-	exit 0
-    fi
-fi
-
-exec /usr/bin/install "$@";
