@@ -1,3 +1,11 @@
+2002-03-15  Manish Singh  <yosh@gimp.org>
+
+	* Makefile
+	* install-check.c: rewrote install-check in C. Much faster now.
+	I also did a check for .h[^.]*$ to make it only cmp on header
+	files. Not entirely sure that is completely valid (are there any
+	installed headers that don't end in .h?)
+
 2002-03-15  Dave Neary  <bolsh@gimp.org>
 
 	* moduleinfo.py (head): Added sawfish and it's
